--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -449,7 +449,7 @@
 	"melee_weapon_temporary_damage": "Mod. temporaire",
 	"melee_weapon_traits": "Traits",
 	"mod": "carac.",
-	"mod-temp": "Mod. au modificateur",
+	"mod-temp": "Mod. Modif.",
 	"modifier": "modificateur",
 	"mods": "mods",
 	"movement_notes": "Type de mouvement & notes",
@@ -623,7 +623,7 @@
 	"school": "ÉCOLE",
 	"score": "valeur",
 	"score-base": "valeur",
-	"score-temp": "Mod. à la valeur",
+	"score-temp": "Mod. valeur",
 	"sense": "sense",
 	"sense_name": "sense name",
 	"sense_settings": "Modifier",
