--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -182,7 +182,7 @@
 	"conjuration": "CONJURATION",
 	"constant": "PERMANENT",
 	"constitution": "constitution",
-	"constitution_modifier": "constitution modifier",
+	"constitution_modifier": "Modificateur de Constitution",
 	"constitution_modifier_temporary": "Mod. temporaire au modificateur de Constitution",
 	"constitution_notes": "Notes",
 	"constitution_score": "Valeur",
@@ -305,14 +305,14 @@
 	"gm_whisper": "Chuchoter au MD",
 	"gold_pieces": "gold pieces",
 	"gp": "po",
-	"hardness": "Blocage",
+	"hardness": "Bloc.",
 	"heavy": "lourde",
 	"heavy_armor_rank_select": "Sélectionnez le rang",
 	"height-char": "taille",
 	"hero_points": "points héroïque",
 	"hit_points": "points de vie",
-	"hit_points_ancestry": "hit points from ancestry",
-	"hit_points_class": "hit points from class",
+	"hit_points_ancestry": "Points de Vie de la race",
+	"hit_points_class": "Points de Vie de la classe",
 	"hit_points_current": "Points de Vie actuel",
 	"hit_points_dying": "hit points dying",
 	"hit_points_item": "Mod. d'Objet",
@@ -586,7 +586,7 @@
 	"readied_item_settings": "Modifier",
 	"readied_items": "Objets préparés",
 	"ref": "ref",
-	"ref-save": "REF SAVE",
+	"ref-save": "SVF REF",
 	"reflex": "réflexes",
 	"reflex_item": "Mod. d'Objet",
 	"reflex_saving_throw_ability": "Caractéristique",
@@ -717,7 +717,7 @@
 	"stealth_settings": "Modifier",
 	"stealth_temporary": "Mod. temporaire",
 	"str": "for",
-	"str_half": "str half",
+	"str_half": "1/2 For",
 	"strenght_modifier_temporary": "Mod. temporaire au modificateur de Force",
 	"strenght_notes": "Notes",
 	"strenght_score": "Valeur",
@@ -763,8 +763,8 @@
 	"type": "type",
 	"unarmed_rank_select": "Sélectionnez le rang",
 	"unarmored": "sans arm.",
-	"untrained": "Non entraîné",
-	"untrained_0": "Non entraîné +0",
+	"untrained": "Non-entraîné",
+	"untrained_0": "Non-entraîné +0",
 	"usage": "usage",
 	"use": "Use",
 	"v": "v",
@@ -785,8 +785,8 @@
 	"will_saving_throw_ability_select": "Caractéristique",
 	"will_saving_throw_rank_select": "Sélectionnez le rang",
 	"will_temporary": "Mod. temporaire",
-	"wis": "wis",
-	"wisdom": "wisdom",
+	"wis": "sag",
+	"wisdom": "sagesse",
 	"wisdom_modifier": "Modificateur de Sagesse",
 	"wisdom_modifier_temporary": "Mod. temporaire au modificateur de Sagesse",
 	"wisdom_notes": "Notes",
