[Update] For last version of rules

--- a/Eclipse Phase V2/translations/fr.json
+++ b/Eclipse Phase V2/translations/fr.json
@@ -164,8 +164,10 @@
 	"backup": "Sauvegardes",
 	"rez point": "Points d'XP",
 	"rp spent": "XP Dépensé",
-	"roll public": "Jet Public",
-	"roll private": "Jet Privé",
+	"public roll ?": "Jet public ?",
+	"Play the muse of another player ?": "Jouer la Muse d'un autre joueur ?",
+	"yes": "Oui",
+	"no": "Non",
 	"fray vs ranged": "Esquive vs Distance",
 	"fray vs melee": "Esquive vs Mêlée",
 	"modifiers": "Modif.",
