Pathfinder 2E Update fr.json (#5463)
* Update fr.json

* Update fr.json

* Update fr.json

* Update fr.json

* Update fr.json

--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -46,7 +46,7 @@
 	"ability_modifiers": "ability modifiers",
 	"ability_scores": "caractéristiques",
 	"abjuration": "ABJURATION",
-	"ac": "ca",
+	"ac": "CA",
 	"acid": "acide",
 	"acrobatic_settings": "Modifier",
 	"acrobatics": "acrobaties",
@@ -54,7 +54,7 @@
 	"acrobatics_ability_modifier": "Caractéristique",
 	"acrobatics_ability_select": "Caractéristique",
 	"acrobatics_armor_pentalty": "Pénalité d'armure",
-	"acrobatics_item": "Objet",
+	"acrobatics_item": "Mod. d'Objet",
 	"acrobatics_notes": "Notes",
 	"acrobatics_proficiency": "Rang",
 	"acrobatics_rank_select": "Rang",
@@ -75,7 +75,7 @@
 	"always_whisper_roll": "toujours chuchoter les jets",
 	"ancestry": "ancêtres",
 	"ancestry_feat_and_abilities": "Talent / capacité raciale",
-	"ancestry_feat_level": "Niveau",
+	"ancestry_feat_level": "Niv.",
 	"ancestry_feat_notes": "Notes",
 	"ancestry_feat_type": "Type",
 	"ancestry_feats_and_abilities": "Talents et capacités raciales",
@@ -85,7 +85,7 @@
 	"arcana_ability_input": "Caractéristique",
 	"arcana_ability_modifier": "Caractéristique",
 	"arcana_ability_select": "Caractéristique",
-	"arcana_item": "Objet",
+	"arcana_item": "Mod. d'Objet",
 	"arcana_notes": "Notes",
 	"arcana_proficiency": "Rang",
 	"arcana_rank_select": "Sélectionnez le rang",
@@ -100,7 +100,7 @@
 	"armor_class_ability_input": "Caractéristique",
 	"armor_class_ability_select": "Caractéristique",
 	"armor_class_cap": "Dextérité maximale",
-	"armor_class_item": "Objet",
+	"armor_class_item": "Mod. d'Objet",
 	"armor_class_modifier": "Caractéristiques",
 	"armor_class_notes": "Notes",
 	"armor_class_proficiency": "Rang",
@@ -113,7 +113,7 @@
 	"athletics_ability_modifier": "Caractéristique",
 	"athletics_ability_select": "Caractéristique",
 	"athletics_armor_pentalty": "Pénalité d'armure",
-	"athletics_item": "Objet",
+	"athletics_item": "Mod. d'Objet",
 	"athletics_notes": "Notes",
 	"athletics_proficiency": "Rang",
 	"athletics_rank_select": "Sélectionnez le rang",
@@ -142,7 +142,7 @@
 	"cantrip": "tour de magie",
 	"cantrip_level": "Niveau",
 	"cantrips": "tours de magie",
-	"cap": "cap",
+	"cap": "Cap",
 	"cast": "composantes",
 	"catchphrases": "phrases fétiches",
 	"cha": "cha",
@@ -160,7 +160,7 @@
 	"class feat": "TALENT DE CLASSE",
 	"class": "classe",
 	"class_dc": "DD de classe",
-	"class_dc_item": "Objet",
+	"class_dc_item": "Mod. d'Objet",
 	"class_dc_key_ability": "Caractéristique",
 	"class_dc_key_ability_select": "Caractéristique",
 	"class_dc_notes": "Notes",
@@ -182,7 +182,7 @@
 	"conjuration": "CONJURATION",
 	"constant": "PERMANENT",
 	"constitution": "constitution",
-	"constitution_modifier": "constitution modifier",
+	"constitution_modifier": "Modificateur de Constitution",
 	"constitution_modifier_temporary": "Mod. temporaire au modificateur de Constitution",
 	"constitution_notes": "Notes",
 	"constitution_score": "Valeur",
@@ -194,7 +194,7 @@
 	"crafting_ability_input": "Caractéristique",
 	"crafting_ability_modifier": "Caractéristique",
 	"crafting_ability_select": "Caractéristique",
-	"crafting_item": "Objet",
+	"crafting_item": "Mod. d'Objet",
 	"crafting_notes": "Notes",
 	"crafting_proficiency": "Rang",
 	"crafting_rank_select": "Sélectionnez le rang",
@@ -207,7 +207,7 @@
 	"critical_failure": "échec critique",
 	"critical_success": "réussite critique",
 	"current": "actuel",
-	"custom": "custom",
+	"custom": "perso.",
 	"d6": "d6",
 	"daily-uses": "utilisation quotidienne",
 	"damage": "dégât",
@@ -221,7 +221,7 @@
 	"deception_ability_modifier": "Caractéristique",
 	"deception_ability_select": "Caractéristique",
 	"deception_armor_pentalty": "Pénalité d'armure",
-	"deception_item": "Objet",
+	"deception_item": "Mod. d'Objet",
 	"deception_notes": "Notes",
 	"deception_proficiency": "Rang",
 	"deception_rank_select": "Sélectionnez le rang",
@@ -244,7 +244,7 @@
 	"diplomacy_ability_input": "Caractéristique",
 	"diplomacy_ability_modifier": "Caractéristique",
 	"diplomacy_ability_select": "Caractéristique",
-	"diplomacy_item": "Objet",
+	"diplomacy_item": "Mod. d'Objet",
 	"diplomacy_notes": "Notes",
 	"diplomacy_proficiency": "Rang",
 	"diplomacy_rank_select": "Sélectionnez le rang",
@@ -268,8 +268,8 @@
 	"ethnicity": "origine ethnique",
 	"evocation": "ÉVOCATION",
 	"experience_points_xp": "expérience (xp)",
-	"expert": "expert",
-	"expert_4_level": "expert 4+level",
+	"expert": "Expert",
+	"expert_4_level": "Expert 4+niv.",
 	"failure": "échec",
 	"feat_ancestry_settings": "Modifier",
 	"feat_bonus_settings": "Modifier",
@@ -285,7 +285,7 @@
 	"fort": "fort",
 	"fort-save": "SAUVEGARDE DE VIGUEUR",
 	"fortitude": "vigueur",
-	"fortitude_item": "Objet",
+	"fortitude_item": "Mod. d'Objet",
 	"fortitude_saving_throw_ability": "Caractéristique",
 	"fortitude_saving_throw_ability_select": "Caractéristique",
 	"fortitude_saving_throw_rank_select": "Sélectionnez le rang",
@@ -305,17 +305,17 @@
 	"gm_whisper": "Chuchoter au MD",
 	"gold_pieces": "gold pieces",
 	"gp": "po",
-	"hardness": "Blocage",
+	"hardness": "Bloc.",
 	"heavy": "lourde",
 	"heavy_armor_rank_select": "Sélectionnez le rang",
 	"height-char": "taille",
 	"hero_points": "points héroïque",
 	"hit_points": "points de vie",
-	"hit_points_ancestry": "hit points from ancestry",
-	"hit_points_class": "hit points from class",
+	"hit_points_ancestry": "Points de Vie de la race",
+	"hit_points_class": "Points de Vie de la classe",
 	"hit_points_current": "Points de Vie actuel",
 	"hit_points_dying": "hit points dying",
-	"hit_points_item": "Objet",
+	"hit_points_item": "Mod. d'Objet",
 	"hit_points_max": "Points de Vie max",
 	"hit_points_notes": "Notes",
 	"hit_points_other": "Autres",
@@ -357,7 +357,7 @@
 	"intimidation_ability_input": "Caractéristique",
 	"intimidation_ability_modifier": "Caractéristique",
 	"intimidation_ability_select": "Caractéristique",
-	"intimidation_item": "Objet",
+	"intimidation_item": "Mod. d'Objet",
 	"intimidation_notes": "Notes",
 	"intimidation_proficiency": "Rang",
 	"intimidation_rank_select": "Sélectionnez le rang",
@@ -370,14 +370,14 @@
 	"item_name": "item name",
 	"item_settings": "Modifier",
 	"items": "items",
-	"key": "car",
+	"key": "carac.",
 	"language": "langue",
 	"language_name": "Nom",
 	"language_notes": "Notes",
 	"language_settings": "Modifier",
 	"languages": "langues",
-	"legendary": "légende",
-	"legendary_8_level": "légende 8+level",
+	"legendary": "Légende",
+	"legendary_8_level": "Légende 8+niv.",
 	"level": "niveau",
 	"light": "légère",
 	"light_armor_rank_select": "Sélectionnez le rang",
@@ -386,7 +386,7 @@
 	"lore_ability_input": "Caractéristique",
 	"lore_ability_modifier": "Caractéristique",
 	"lore_ability_select": "Caractéristique",
-	"lore_item": "Objet",
+	"lore_item": "Mod. d'Objet",
 	"lore_name": "Nom",
 	"lore_notes": "Notes",
 	"lore_proficiency": "Rang",
@@ -402,8 +402,8 @@
 	"magical_tradition_primal": "tradition magique primale",
 	"martial": "martiales",
 	"martial_weapon_proficiencies_rank": "Rang",
-	"master": "maître",
-	"master_6_level": "maître 6+level",
+	"master": "Maître",
+	"master_6_level": "Maître 6+niv.",
 	"max": "PV max",
 	"maximum": "maximum",
 	"maximum_hit_points": "points de vie maximum",
@@ -411,7 +411,7 @@
 	"medicine_ability_input": "Caractéristique",
 	"medicine_ability_modifier": "Caractéristique",
 	"medicine_ability_select": "Caractéristique",
-	"medicine_item": "Objet",
+	"medicine_item": "Mod. d'Objet",
 	"medicine_notes": "Notes",
 	"medicine_proficiency": "Rang",
 	"medicine_rank_select": "Sélectionnez le rang",
@@ -438,18 +438,18 @@
 	"melee_weapon_damage_supplementary_effects": "Effets supplémentaires",
 	"melee_weapon_name": "Nom de l'arme",
 	"melee_weapon_notes": "Notes",
-	"melee_weapon_other_damage": "Autres dégâts",
+	"melee_weapon_other_damage": "Dégâts supplémentaires",
 	"melee_weapon_settings": "Modifier",
 	"melee_weapon_specialization_damage": "Dgt. Spécialisation",
 	"melee_weapon_strike_ability": "Caractéristique",
 	"melee_weapon_strike_ability_select": "Caractéristique",
-	"melee_weapon_strike_item": "Objet",
+	"melee_weapon_strike_item": "Mod. d'Objet",
 	"melee_weapon_strike_rank": "Rang",
 	"melee_weapon_strike_temporary": "Mod. temporaire",
 	"melee_weapon_temporary_damage": "Mod. temporaire",
 	"melee_weapon_traits": "Traits",
-	"mod": "car",
-	"mod-temp": "Mod. modific.",
+	"mod": "carac.",
+	"mod-temp": "Mod. Modif.",
 	"modifier": "modificateur",
 	"mods": "mods",
 	"movement_notes": "Type de mouvement & notes",
@@ -461,7 +461,7 @@
 	"nature_ability_input": "Caractéristique",
 	"nature_ability_modifier": "Caractéristique",
 	"nature_ability_select": "Caractéristique",
-	"nature_item": "Objet",
+	"nature_item": "Mod. d'Objet",
 	"nature_notes": "Notes",
 	"nature_proficiency": "Rang",
 	"nature_rank_select": "Sélectionnez le rang",
@@ -486,7 +486,7 @@
 	"occultism_ability_input": "Caractéristique",
 	"occultism_ability_modifier": "Caractéristique",
 	"occultism_ability_select": "Caractéristique",
-	"occultism_item": "Objet",
+	"occultism_item": "Mod. d'Objet",
 	"occultism_notes": "Notes",
 	"occultism_proficiency": "Rang",
 	"occultism_rank_select": "Sélectionnez le rang",
@@ -497,8 +497,8 @@
 	"options": "options",
 	"or": "ou",
 	"organizations": "organisations",
-	"other": "autres armes",
-	"other_effects": "other effects",
+	"other": "Autres",
+	"other_effects": "Autres effets",
 	"other_item_bulk": "Encombrement",
 	"other_item_name": "Nom",
 	"other_item_notes": "Notes",
@@ -512,7 +512,7 @@
 	"perception_settings": "Modifier",
 	"percetion_ability": "Caractéristique",
 	"percetion_ability_select": "Caractéristique",
-	"percetion_item": "Objet",
+	"percetion_item": "Mod. d'Objet",
 	"percetion_modifier": "perception modifier",
 	"percetion_notes": "Notes",
 	"percetion_proficiency": "Rang",
@@ -522,7 +522,7 @@
 	"performance_ability_input": "Caractéristique",
 	"performance_ability_modifier": "Caractéristique",
 	"performance_ability_select": "Caractéristique",
-	"performance_item": "Objet",
+	"performance_item": "Mod. d'Objet",
 	"performance_notes": "Notes",
 	"performance_proficiency": "Rang",
 	"performance_rank_select": "Sélectionnez le rang",
@@ -546,7 +546,7 @@
 	"proficiencies": "rangs",
 	"proficiency": "rang",
 	"query_whisper_roll": "query whisper roll",
-	"range": "Range",
+	"range": "Portée",
 	"range_attack_damage": "Dégâts",
 	"range_attack_damage_type": "Type de dégâts",
 	"range_attack_modifier": "Modificateur",
@@ -564,13 +564,13 @@
 	"range_weapon_damage_supplementary_effects": "Effets supplémentaires",
 	"range_weapon_name": "Nom de l'arme",
 	"range_weapon_notes": "Notes",
-	"range_weapon_other_damage": "Autres dégâts",
+	"range_weapon_other_damage": "Dégâts supplémentaires",
 	"range_weapon_range": "Portée",
 	"range_weapon_settings": "Modifier",
 	"range_weapon_specialization_damage": "Dgt. Spécialisation",
 	"range_weapon_strike_ability": "Caractéristique",
 	"range_weapon_strike_ability_select": "Caractéristique",
-	"range_weapon_strike_item": "Objet",
+	"range_weapon_strike_item": "Mod. d'Objet",
 	"range_weapon_strike_rank": "Rang",
 	"range_weapon_strike_temporary": "Mod. temporaire",
 	"range_weapon_temporary_damage": "Mod. temporaire",
@@ -586,9 +586,9 @@
 	"readied_item_settings": "Modifier",
 	"readied_items": "Objets préparés",
 	"ref": "ref",
-	"ref-save": "REF SAVE",
+	"ref-save": "SVF REF",
 	"reflex": "réflexes",
-	"reflex_item": "Objet",
+	"reflex_item": "Mod. d'Objet",
 	"reflex_saving_throw_ability": "Caractéristique",
 	"reflex_saving_throw_ability_select": "Caractéristique",
 	"reflex_saving_throw_rank_select": "Sélectionnez le rang",
@@ -597,7 +597,7 @@
 	"religion_ability_input": "Caractéristique",
 	"religion_ability_modifier": "Caractéristique",
 	"religion_ability_select": "Caractéristique",
-	"religion_item": "Objet",
+	"religion_item": "Mod. d'Objet",
 	"religion_notes": "Notes",
 	"religion_proficiency": "Rang",
 	"religion_rank_select": "Sélectionnez le rang",
@@ -629,8 +629,8 @@
 	"sense_settings": "Modifier",
 	"senses": "sens",
 	"senses_notes": "Notes",
-	"shield": "shield",
-	"shield_bonus_to_ac": "Bous de bouclier à la CA",
+	"shield": "bouclier",
+	"shield_bonus_to_ac": "Bonus de bouclier à la CA",
 	"shield_bt": "Seuil de Casse du bouclier.",
 	"shield_hardness": "Nombre de points de dégâts absorbés par le bouclier lorsque vous utilisez la réaction Blocage. ",
 	"shield_hp": "Points de vie actuel du bouclier",
@@ -668,7 +668,7 @@
 	"society_ability_input": "Caractéristique",
 	"society_ability_modifier": "Caractéristique",
 	"society_ability_select": "Caractéristique",
-	"society_item": "Objet",
+	"society_item": "Mod. d'Objet",
 	"society_notes": "Notes",
 	"society_proficiency": "Rang",
 	"society_rank_select": "Sélectionnez le rang",
@@ -680,7 +680,7 @@
 	"special": "special",
 	"speed": "Vitesse",
 	"speed_in_feet": "speed in feet",
-	"spell tradition": "SPELL TRADITION",
+	"spell tradition": "Sélectionnez...",
 	"spell": "spell",
 	"spell_attack_key_ability": "Caractéristique",
 	"spell_attack_key_ability_select": "Caractéristique",
@@ -710,14 +710,14 @@
 	"stealth_ability_modifier": "Caractéristique",
 	"stealth_ability_select": "Caractéristique",
 	"stealth_armor_pentalty": "Pénalité d'armure",
-	"stealth_item": "Objet",
+	"stealth_item": "Mod. d'Objet",
 	"stealth_notes": "Notes",
 	"stealth_proficiency": "Rang",
 	"stealth_rank_select": "Sélectionnez le rang",
 	"stealth_settings": "Modifier",
 	"stealth_temporary": "Mod. temporaire",
 	"str": "for",
-	"str_half": "str half",
+	"str_half": "1/2 For",
 	"strenght_modifier_temporary": "Mod. temporaire au modificateur de Force",
 	"strenght_notes": "Notes",
 	"strenght_score": "Valeur",
@@ -732,21 +732,21 @@
 	"survival_ability_input": "Caractéristique",
 	"survival_ability_modifier": "Caractéristique",
 	"survival_ability_select": "Caractéristique",
-	"survival_item": "Objet",
+	"survival_item": "Mod. d'Objet",
 	"survival_notes": "Notes",
 	"survival_proficiency": "Rang",
 	"survival_rank_select": "Sélectionnez le rang",
 	"survival_settings": "Modifier",
 	"survival_temporary": "Mod. temporaire",
 	"target": "CIBLE",
-	"temp": "temp",
+	"temp": "temp.",
 	"temporary": "PV temp.",
 	"thievery": "larcin",
 	"thievery_ability_input": "Caractéristique",
 	"thievery_ability_modifier": "Caractéristique",
 	"thievery_ability_select": "Caractéristique",
 	"thievery_armor_pentalty": "Pénalité d'armure",
-	"thievery_item": "Objet",
+	"thievery_item": "Mod. d'Objet",
 	"thievery_notes": "Notes",
 	"thievery_proficiency": "Rang",
 	"thievery_rank_select": "Sélectionnez le rang",
@@ -755,7 +755,7 @@
 	"three-action_activity": "activité 3 actions",
 	"token_size": "token size",
 	"trained": "Entraîné",
-	"trained_2_level": "Entraîné 2+level",
+	"trained_2_level": "Entraîné 2+niv.",
 	"traits": "traits",
 	"transmutation": "TRANSMUTATION",
 	"trigger": "déclencheur",
@@ -763,8 +763,8 @@
 	"type": "type",
 	"unarmed_rank_select": "Sélectionnez le rang",
 	"unarmored": "sans arm.",
-	"untrained": "non entraîné",
-	"untrained_0": "non entraîné +0",
+	"untrained": "Non-entraîné",
+	"untrained_0": "Non-entraîné +0",
 	"usage": "usage",
 	"use": "Use",
 	"v": "v",
@@ -778,15 +778,15 @@
 	"weapon_proficiencies": "Maniement des armes",
 	"weight": "poids",
 	"whisper_rolls_to_gm": "murmurer les jets au mj",
-	"will": "will",
+	"will": "Volonté",
 	"will-save": "volonté",
-	"will_item": "Objet",
+	"will_item": "Mod. d'Objet",
 	"will_saving_throw_ability": "Caractéristique",
 	"will_saving_throw_ability_select": "Caractéristique",
 	"will_saving_throw_rank_select": "Sélectionnez le rang",
 	"will_temporary": "Mod. temporaire",
-	"wis": "wis",
-	"wisdom": "wisdom",
+	"wis": "sag",
+	"wisdom": "sagesse",
 	"wisdom_modifier": "Modificateur de Sagesse",
 	"wisdom_modifier_temporary": "Mod. temporaire au modificateur de Sagesse",
 	"wisdom_notes": "Notes",
